Completed all markdown comments of rnn

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -311,7 +311,42 @@
    "cell_type": "markdown",
    "source": [
     "# Model Implementation\n",
-    "## Create model"
+    "## Lightweight LSTM Model Implementation\n",
+    "\n",
+    "In this task, we aim to build a lightweight Long Short-Term Memory (LSTM) network for handling time series data. The objective of this model is to optimize performance while reducing the demand for computational resources. To achieve this goal, we will employ several key design strategies.\n",
+    "\n",
+    "## Model Construction\n",
+    "Firstly, we have defined a PyTorch-based LSTM model class `LightweightLSTM`. This class comprises the following main components:\n",
+    "- **Initialization Function** (`__init__` method): We set the input size (`input_size`), hidden layer size (`hidden_size`), output size (`output_size`), and other optional parameters such as the number of layers (`num_layers`) and a width multiplier (`width_multiplier`). These parameters allow us to customize the model’s size and complexity based on the task requirements.\n",
+    "- **Width Adjustment**: The hidden layer size (`adjusted_hidden_size`) is adjusted using the width multiplier, making the model more flexible and lightweight. This multiplier allows us to adjust its capacity while maintaining the model structure, thus adapting to different computational and performance requirements.\n",
+    "- **LSTM Layer**: An LSTM layer with the adjusted hidden layer size is defined to process the input sequence data. We use the `batch_first=True` parameter, enabling the model to handle batch data more conveniently.\n",
+    "- **Fully Connected Layer**: A linear layer (`nn.Linear`) maps the output of the LSTM to the desired output size.\n",
+    "\n",
+    "## Forward Propagation\n",
+    "In the `forward` method, we describe the process of data propagation through the model:\n",
+    "- **LSTM Processing**: The input data `x` passes through the LSTM layer, producing feature vectors that contain the results for each time step.\n",
+    "- **Extracting the Output of the Last Time Step**: In many time series tasks, the output of the last time step is particularly important. We extract this part of the data from the LSTM output.\n",
+    "- **Output Layer**: Finally, we transform the output of the last time step into the final prediction result through the fully connected layer.\n",
+    "\n",
+    "With this design, our `LightweightLSTM` model can effectively process time series data while maintaining a lower computational complexity, making it suitable for resource-constrained environments or applications requiring quick responses.\n",
+    "\n",
+    "## Problem Formulation\n",
+    "\n",
+    "In this task, we utilize the `LightweightLSTM` model to solve a binary classification problem, specifically determining the category of time series data. The key components of the problem formulation are detailed below:\n",
+    "\n",
+    "- **Objective**: The objective is to use the `LightweightLSTM` model to predict binary outcomes based on input time series data. This means that for each input sequence, the model needs to determine whether it belongs to category 0 or category 1.\n",
+    "\n",
+    "- **Input**: The input data $\\mathbf{X} = \\{\\mathbf{x}_1, \\mathbf{x}_2, \\ldots, \\mathbf{x}_T\\}$ is a time series, where each $\\mathbf{x}_t \\in \\mathbb{R}^{n}$ is an $n$-dimensional feature vector at time point $t$.\n",
+    "\n",
+    "- **Output**: The output $\\hat{y}$ of the model is a probability value, indicating the likelihood of the input sequence belonging to a specific category. Since this is a binary classification task, $\\hat{y} \\in [0, 1]$.\n",
+    "\n",
+    "- **Model**: `LightweightLSTM` is a neural network based on LSTM architecture, particularly suited for processing time series data. The model learns temporal dependencies through its LSTM layers and fully connected layer, and outputs the classification probability.\n",
+    "\n",
+    "- **Loss Function**: We use the Binary Cross-Entropy Loss (BCE) to quantify the difference between the model predictions and the actual labels. The loss function is defined as:\n",
+    "$$L(\\mathbf{y}, \\hat{\\mathbf{y}}) = -\\frac{1}{N} \\sum_{i=1}^{N} \\left[ y_i \\cdot \\log(\\sigma(\\hat{y}_i)) + (1 - y_i) \\cdot \\log(1 - \\sigma(\\hat{y}_i)) \\right]$$\n",
+    "  where $N$ is the number of samples, $y_i$ is the actual class label of sample $i$ (0 or 1), $\\hat{y}_i$ is the predicted output of the model for sample $i$, and $\\sigma$ is the Sigmoid function.\n",
+    "\n",
+    "- **Optimization Objective**: The optimization objective is to minimize the Binary Cross-Entropy Loss, i.e., finding a set of parameters $\\theta$ that minimizes $L(\\mathbf{y}, \\hat{\\mathbf{y}}; \\theta)$."
    ],
    "metadata": {
     "collapsed": false
@@ -357,7 +392,20 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Initialize model"
+    "## LSTM Model Instantiation\n",
+    "\n",
+    "In this section of the code, we instantiate the `LightweightLSTM` model with specific hyperparameters tailored for our binary classification task on time series data. The configuration of the model is as follows:\n",
+    "\n",
+    "1. **Defining Hyperparameters**:\n",
+    "   - `features_num`: This represents the number of input features in the dataset, determined by `X_train.shape[1]`. It sets the input size for our LSTM model.\n",
+    "   - `hidden_neurons_num`: We have set the number of neurons in each hidden layer of the LSTM to 512. This number defines the capacity and complexity of the LSTM layers.\n",
+    "   - `output_neurons_num`: Since this is a binary classification task, the number of output neurons is set to 1. The output of the model will represent the probability of the input belonging to one of the two classes.\n",
+    "   - `lstm_num_layers`: The model is configured with 2 LSTM layers. Multiple layers can help the model learn more complex patterns in the data.\n",
+    "   - `multiplier`: A width multiplier set to 1, indicating that we are using the base size for the hidden layers without any scaling.\n",
+    "\n",
+    "2. **Model Initialization**:\n",
+    "   - The `LightweightLSTM` model is initialized with these hyperparameters. This step creates a model instance that is ready to be trained on our dataset.\n",
+    "   - The model is then transferred to the designated computing device with `.to(device)`. This ensures that the model will utilize the correct hardware (such as a GPU) for training and inference, improving computational efficiency."
    ],
    "metadata": {
     "collapsed": false
@@ -387,6 +435,28 @@
    "id": "2d66654954854fc2"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Computing Class Weights to Balance the Dataset\n",
+    "\n",
+    "In our task, the occurrence of attacks (positive samples) in network data is typically less frequent compared to normal (negative samples) traffic, leading to an issue of class imbalance in our dataset. To address this issue and enhance the model's performance in detecting attacks, we have adopted a method of computing class weights.\n",
+    "\n",
+    "1. **Calculating Weights Using `compute_class_weight`**:\n",
+    "   - We calculate weights for each category using the `compute_class_weight` function from scikit-learn. These weights are determined based on their frequency of occurrence in the training set (`y_train`).\n",
+    "   - Setting `class_weight='balanced'` ensures that less frequently occurring categories (in our case, attack data) are assigned higher weights.\n",
+    "   - `classes=np.unique(y_train)`: This ensures that the weight calculation encompasses all unique class labels.\n",
+    "\n",
+    "2. **Converting to PyTorch Tensor and Assigning to the Device**:\n",
+    "   - The calculated class weights are then converted into a PyTorch tensor, as our model is trained using PyTorch.\n",
+    "\n",
+    "By this approach, we adjust the model's handling of class imbalance, thereby making it more effective in detecting potential attacks in IoT device network data. This helps to increase the model's accuracy and sensitivity in detecting attack categories that occur less frequently."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4a3db2268fc6ed9c"
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "outputs": [],
@@ -406,7 +476,20 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Build loss functions and optimizers"
+    "## Setting Up the Loss Function and Optimizer\n",
+    "\n",
+    "In this part of the code, we configure the loss function and optimizer for our neural network model, which is crucial for the model's training process.\n",
+    "\n",
+    "1. **Defining Custom Weights for Loss Function**:\n",
+    "   - `weights`: We create a tensor `weights` with two elements. The first element is for the negative class (normal data), set to 1. The second element is the computed weight for the positive class (attack data), derived from `class_weights[1]`. This approach emphasizes the importance of correctly classifying the less frequent positive class in our dataset.\n",
+    "   - The tensor `weights` is defined with data type `torch.float`, ensuring compatibility with PyTorch operations.\n",
+    "\n",
+    "2. **Binary Cross-Entropy with Logits Loss (BCEWithLogitsLoss)**:\n",
+    "   - `criterion`: We use the `nn.BCEWithLogitsLoss` loss function from PyTorch, which combines a Sigmoid layer and the BCELoss in one single class. This is particularly useful for binary classification tasks.\n",
+    "   - The argument `torch.FloatTensor([weights[1] / weights[0]])` is passed to the loss function, which adjusts the loss calculation to account for the imbalance between the positive and negative classes.\n",
+    "\n",
+    "3. **Optimizer Configuration**:\n",
+    "   - `optimizer`: We use the Adam optimizer, a popular choice for training deep learning models. It's defined with `optim.Adam(model.parameters(), lr=0.0001)`, where `lr=0.0001` specifies a learning rate of 0.0001. This learning rate determines the step size during the gradient descent optimization process."
    ],
    "metadata": {
     "collapsed": false
@@ -434,7 +517,21 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Construct Data Loader"
+    "## Preparing the Training Data\n",
+    "\n",
+    "In this section of the code, we are preparing our training data for the neural network model, particularly for batch processing during training. This involves converting the data into PyTorch tensors, organizing it into a dataset, and finally creating a data loader for efficient batch processing.\n",
+    "\n",
+    "1. **Setting Batch Size**:\n",
+    "   - `batch_size`: We set the batch size to 128. Batch size is a key hyperparameter in training neural networks, determining the number of samples processed before the model's internal parameters are updated.\n",
+    "\n",
+    "2. **Converting Training Data to PyTorch Tensors**:\n",
+    "   - `X_train_tensor`: The feature data (`X_train`) from the training set is converted into a PyTorch tensor. We use `.float()` to ensure the data is in floating-point format, which is required for neural network operations in PyTorch.\n",
+    "   - `y_train_tensor`: Similarly, the target variable (`y_train`) is converted into a PyTorch tensor.\n",
+    "   - Both tensors are reshaped with `.unsqueeze(1)` to add an additional dimension, aligning them with the expected input format for the neural network.\n",
+    "\n",
+    "3. **Creating TensorDataset and DataLoader**:\n",
+    "   - `train_dataset`: We use `TensorDataset` to create a dataset from `X_train_tensor` and `y_train_tensor`. `TensorDataset` is a convenient wrapper for combining features and target tensors.\n",
+    "   - `train_loader`: The `DataLoader` is created from the `train_dataset`. It facilitates efficient iteration over the dataset in batches of size `batch_size`, here 128. The `shuffle=False` parameter indicates that the data will not be shuffled at each epoch. In certain time-series applications, maintaining the sequence of data is crucial."
    ],
    "metadata": {
     "collapsed": false
@@ -464,7 +561,31 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Training model"
+    "## Training Loop\n",
+    "\n",
+    "This section of the code outlines the training process of the neural network model over a specified number of epochs. \n",
+    "\n",
+    "1. **Setting Up the Training**:\n",
+    "   - `num_epochs`: The total number of epochs (iterations over the entire dataset) is set to 100. An epoch is one complete cycle through the training data.\n",
+    "   - `loss_list` and `acc_list`: These lists are initialized to store the loss and accuracy values for each epoch, allowing for tracking the model's performance over time.\n",
+    "\n",
+    "2. **Training Loop**:\n",
+    "   - The loop iterates over the number of epochs specified. In each epoch, the model's parameters are updated based on the training data.\n",
+    "   - `model.train()`: This sets the model to training mode, enabling certain layers like dropout and batch normalization to function appropriately during training.\n",
+    "   - `running_loss` and `running_accuracy`: Variables initialized to accumulate the loss and accuracy for each batch within an epoch.\n",
+    "\n",
+    "3. **Batch Processing Within Each Epoch**:\n",
+    "   - The inner loop iterates over each batch of data in `train_loader`.\n",
+    "   - **Forward Pass (FP)**: The model computes the output (`outputs`) for a batch of inputs.\n",
+    "   - **Loss Computation**: The loss between the outputs and the ground truth labels is calculated using the criterion defined earlier.\n",
+    "   - **Backpropagation and Optimization (BP)**: The gradients are computed (`loss.backward()`) and the optimizer updates the model parameters (`optimizer.step()`).\n",
+    "\n",
+    "4. **Calculating Performance Indicators**:\n",
+    "   - After processing each batch, the model's predictions and loss are used to calculate the running accuracy and loss.\n",
+    "   - These values are then averaged over all batches to obtain the epoch's average loss and accuracy.\n",
+    "\n",
+    "5. **Logging and Progress Update**:\n",
+    "   - At the end of each epoch, the average loss and accuracy are printed, and the progress bar is updated."
    ],
    "metadata": {
     "collapsed": false
@@ -1930,7 +2051,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Visualizing the training process"
+    "## Plotting Training Loss and Accuracy\n",
+    "\n",
+    "This section of the code is focused on visualizing the training performance of the neural network model in terms of loss and accuracy across epochs."
    ],
    "metadata": {
     "collapsed": false
@@ -1981,7 +2104,29 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Unseen test set performance"
+    "## Evaluating the Model on the Test Dataset\n",
+    "\n",
+    "This code section describes the process of evaluating the trained neural network model on the test dataset to assess its performance.\n",
+    "\n",
+    "1. **Preparing Test Data**:\n",
+    "   - `X_test_tensor`: The test feature data (`X_test`) is converted into a PyTorch tensor, ensuring it is in the correct format (floating point) and dimensionality for the model.\n",
+    "\n",
+    "2. **Model Evaluation Mode**:\n",
+    "   - `model.eval()`: This command sets the model to evaluation mode, disabling certain layers like dropout that are only active during training.\n",
+    "\n",
+    "3. **Generating Predictions**:\n",
+    "   - The model is used to compute the output for the test data (`outputs`).\n",
+    "   - `torch.no_grad()`: Ensures that no gradient calculations are performed, which is necessary for evaluation as it saves memory and computations.\n",
+    "   - `probabilities`: The raw outputs from the model are passed through a sigmoid function to convert them into probabilities.\n",
+    "   - `predictions`: Probabilities are converted into binary predictions based on a threshold of 0.5.\n",
+    "\n",
+    "4. **Calculating Performance Metrics**:\n",
+    "   - Various metrics such as accuracy, precision, recall, and F1 score are computed to measure the model's performance. These metrics provide insights into how well the model is performing, particularly in terms of identifying positive cases (attacks) correctly.\n",
+    "\n",
+    "5. **Displaying Evaluation Results**:\n",
+    "   - The performance metrics are printed, giving a comprehensive view of the model's effectiveness on the test dataset.\n",
+    "\n",
+    "This evaluation step is crucial for understanding the real-world applicability of the model in classifying IoT device data, specifically in distinguishing between normal operations and potential security threats."
    ],
    "metadata": {
     "collapsed": false
@@ -2029,7 +2174,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Save model"
+    "# Saving the Trained Model\n",
+    "\n",
+    "This section of the code deals with saving the trained model for future inference purposes. The model can be deployed either directly on IoT devices or used in a fog computing setup through local routers or servers, which helps in offloading computational tasks from the local IoT devices."
    ],
    "metadata": {
     "collapsed": false
