Further improve rnn's markdown

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -86,7 +86,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Load data"
+    "Get the dataset as a dataframe"
    ],
    "metadata": {
     "collapsed": false
@@ -112,7 +112,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Combine 'date' and 'time' into a single datetime column"
+    "# Data Preprocessing for Date and Time Features\n",
+    "\n",
+    "This section of the code focuses on preprocessing the date and time columns in the dataset to create a unified datetime column.\n",
+    "\n",
+    "1. **Stripping Whitespace**:\n",
+    "   - `data['date']` and `data['time']`: Any leading and trailing whitespace in the 'date' and 'time' columns is removed using the `.str.strip()` method. This step ensures that the date and time strings are in a consistent format, which is crucial for successful parsing in the next step.\n",
+    "\n",
+    "2. **Combining Date and Time Columns**:\n",
+    "   - `data['datetime']`: The 'date' and 'time' columns are concatenated with a space in between to form a single string representing the datetime. This combination is necessary to create a unified datetime object from the separate date and time information.\n",
+    "\n",
+    "3. **Converting to DateTime Object**:\n",
+    "   - `pd.to_datetime`: The concatenated string is then converted into a datetime object using Pandas' `to_datetime` function. The `format` parameter is specified as '%d-%b-%y %H:%M:%S', which matches the format of the input strings, ensuring accurate parsing.\n",
+    "   - The resultant 'datetime' column now provides a more useful and standardized format for any subsequent data analysis or time series modeling, integrating both date and time information into a single, coherent column."
    ],
    "metadata": {
     "collapsed": false
@@ -136,7 +148,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Extract time features"
+    "## Extracting Date and Time Components\n",
+    "\n",
+    "This part of the code is focused on extracting specific date and time components from the unified 'datetime' column in the data. This process is crucial for detailed time series analysis or for creating features that might be relevant for predictive modeling.\n",
+    "\n",
+    "By breaking down the datetime into these individual components, the dataset is enriched with additional features that can provide deeper insights during data exploration or enhance the performance of predictive models."
    ],
    "metadata": {
     "collapsed": false
@@ -168,7 +184,20 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Time series models need to ensure that the data set is arranged in time order"
+    "## Finalizing Data Preprocessing for Date and Time Features\n",
+    "\n",
+    "This section of the code is dedicated to finalizing the preprocessing steps for the dataset, ensuring it is organized and formatted appropriately for further analysis or modeling.\n",
+    "\n",
+    "1. **Sorting Data by DateTime**:\n",
+    "   - The dataset is sorted based on the 'datetime' column using `data.sort_values(by='datetime')`. Sorting by datetime is essential for our time series models, as it ensures the data is in chronological order.\n",
+    "\n",
+    "2. **Dropping Unnecessary Columns**:\n",
+    "   - `data.drop(...)`: The original 'date', 'time', 'datetime', and 'type' columns are dropped from the dataset. These columns are no longer needed as we have extracted all the required information into separate features.\n",
+    "   - The `inplace=True` parameter is used to modify the data frame in place, without creating a new one.\n",
+    "\n",
+    "3. **Adjusting Feature Order and Data Type**:\n",
+    "   - `order`: A predefined order of features is specified, including the extracted date and time components, feature columns like 'FC1_Read_Input_Register', 'FC2_Read_Discrete_Value', etc., and the 'label' column.\n",
+    "   - `data = data[order].astype('int32')`: The dataset is then reorganized to follow this specific order, and the data type of all columns is converted to 'int32'. This step ensures that the dataset has a consistent format and is optimized for memory usage, which can be particularly important for large datasets."
    ],
    "metadata": {
     "collapsed": false
