Modify the comments markdown of mlp and rnn

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -343,6 +343,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\n",
     "# Model Implementation\n",
     "## Lightweight LSTM Model Implementation\n",
     "\n",
@@ -604,7 +605,7 @@
     "\n",
     "2. **Training Loop**:\n",
     "   - The loop iterates over the number of epochs specified. In each epoch, the model's parameters are updated based on the training data.\n",
-    "   - `model.train()`: This sets the model to training mode, enabling certain layers like dropout and batch normalization to function appropriately during training.\n",
+    "   - `model.train()`: This sets the model to training mode, enabling certain layers to function appropriately during training.\n",
     "   - `running_loss` and `running_accuracy`: Variables initialized to accumulate the loss and accuracy for each batch within an epoch.\n",
     "\n",
     "3. **Batch Processing Within Each Epoch**:\n",
@@ -2086,7 +2087,7 @@
    "source": [
     "## Plotting Training Loss and Accuracy\n",
     "\n",
-    "This section of the code is focused on visualizing the training performance of the neural network model in terms of loss and accuracy across epochs."
+    "This section of the code is focused on visualizing the training performance of the model in terms of loss and accuracy across epochs."
    ],
    "metadata": {
     "collapsed": false
@@ -2139,13 +2140,13 @@
    "source": [
     "## Evaluating the Model on the Test Dataset\n",
     "\n",
-    "This code section describes the process of evaluating the trained neural network model on the test dataset to assess its performance.\n",
+    "This code section describes the process of evaluating the trained neural network model on the test dataset to assess its performance and generalization ability.\n",
     "\n",
     "1. **Preparing Test Data**:\n",
     "   - `X_test_tensor`: The test feature data (`X_test`) is converted into a PyTorch tensor, ensuring it is in the correct format (floating point) and dimensionality for the model.\n",
     "\n",
     "2. **Model Evaluation Mode**:\n",
-    "   - `model.eval()`: This command sets the model to evaluation mode, disabling certain layers like dropout that are only active during training.\n",
+    "   - `model.eval()`: This command sets the model to evaluation mode, disabling certain layers that are only active during training.\n",
     "\n",
     "3. **Generating Predictions**:\n",
     "   - The model is used to compute the output for the test data (`outputs`).\n",
