Update rnn markdown

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Import necessary dependencies"
+    "# Import necessary dependencies"
    ],
    "metadata": {
     "collapsed": false
