Fix some grammar issues

--- a/data_visualisation.ipynb
+++ b/data_visualisation.ipynb
@@ -1,21 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Import"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "import numpy\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-23T11:22:15.689960300Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## read database"
+    "# Read dataset"
    ]
   },
   {
@@ -238,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## check value counts"
+    "# Check value counts"
    ]
   },
   {
@@ -417,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## merge datetime"
+    "# Merge datetime"
    ]
   },
   {
@@ -717,7 +731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## attack distribute graph"
+    "# Attack distribute graph"
    ]
   },
   {
@@ -959,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## attack type distribute graph"
+    "# Attack type distribute graph"
    ]
   },
   {
@@ -1594,7 +1608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scatter graph"
+    "# Scatter graph"
    ]
   },
   {
