--- a/mlp.ipynb
+++ b/mlp.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Import necessary dependencies"
+    "# Import necessary dependencies"
    ],
    "metadata": {
     "collapsed": false
@@ -23,21 +23,19 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from matplotlib import pyplot as plt\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
-    "import torch\n",
     "from torch import optim\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from torch.utils.data import TensorDataset\n",
     "from torch.utils.data import DataLoader\n",
-    "from matplotlib import pyplot as plt\n",
-    "from tqdm import tqdm\n",
-    "from datetime import datetime"
+    "from torch.utils.data import TensorDataset\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -68,8 +66,6 @@
     "    torch.cuda.manual_seed(seed)\n",
     "    torch.backends.cudnn.deterministic = True\n",
     "    torch.backends.cudnn.benchmark = False\n",
-    "# elif torch.backends.mps.is_available():\n",
-    "#     device = torch.device(\"mps:0\")\n",
     "else:\n",
     "    device = torch.device(\"cpu\")"
    ],
@@ -122,7 +118,7 @@
     "   - `data['datetime']`: The 'date' and 'time' columns are concatenated with a space in between to form a single string representing the datetime. This combination is necessary to create a unified datetime object from the separate date and time information.\n",
     "\n",
     "3. **Converting to DateTime Object**:\n",
-    "   - `pd.to_datetime`: The concatenated string is then converted into a datetime object using Pandas' `to_datetime` function. The `format` parameter is specified as '%d-%b-%y %H:%M:%S', which matches the format of the input strings, ensuring accurate parsing.\n",
+    "   - `pd.to_datetime`: The concatenated string is then converted into a datetime object using Pandas' `to_datetime` function. The `format` parameter is specified as `%d-%b-%y %H:%M:%S`, which matches the format of the input strings, ensuring accurate parsing.\n",
     "   - The resultant 'datetime' column now provides a more useful and standardized format for any subsequent data analysis or time series modeling, integrating both date and time information into a single, coherent column."
    ],
    "metadata": {
@@ -237,7 +233,7 @@
     "---\n",
     "# Data Split\n",
     "## Training, and Testing Sets\n",
-    "In this project, I utilized both training and test sets. Initially, I designated 80% of the data as the training set and the remaining 20% as an unseen test set. This division ensures that the model has sufficient data for learning during the training process, enhancing its accuracy and robustness while preventing underfitting. Moreover, using 20% of unseen data as an independent test set to evaluate the model's final performance helps in assessing the model's generalization capability on new data, rather than merely measuring its fit on the training data.\n",
+    "In this project, I utilized both training and test sets. Initially, we designated 80% of the data as the training set and the remaining 20% as an unseen test set. This division ensures that the model has sufficient data for learning during the training process, enhancing its accuracy and robustness while preventing underfitting. Moreover, using 20% of unseen data as an independent test set to evaluate the model's final performance helps in assessing the model's generalization capability on new data, rather than merely measuring its fit on the training data.\n",
     "\n",
     "In order to compare with our recurrent neural network with Long Short-Term Memory (LSTM), we want to ensure that the training set and unseen test set used in the experiment are consistent. Therefore, we still sort the data set first to split the training set and the test set. However, we then shuffle the order of the training set to improve the model's generalization ability, prevent overfitting, and ensure that the training process is more stable and effective."
    ],
