--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -69,8 +69,6 @@
     "    torch.cuda.manual_seed(seed)\n",
     "    torch.backends.cudnn.deterministic = True\n",
     "    torch.backends.cudnn.benchmark = False\n",
-    "# elif torch.backends.mps.is_available():\n",
-    "#     device = torch.device(\"mps:0\")\n",
     "else:\n",
     "    device = torch.device(\"cpu\")"
    ],
@@ -123,7 +121,7 @@
     "   - `data['datetime']`: The 'date' and 'time' columns are concatenated with a space in between to form a single string representing the datetime. This combination is necessary to create a unified datetime object from the separate date and time information.\n",
     "\n",
     "3. **Converting to DateTime Object**:\n",
-    "   - `pd.to_datetime`: The concatenated string is then converted into a datetime object using Pandas' `to_datetime` function. The `format` parameter is specified as '%d-%b-%y %H:%M:%S', which matches the format of the input strings, ensuring accurate parsing.\n",
+    "   - `pd.to_datetime`: The concatenated string is then converted into a datetime object using Pandas' `to_datetime` function. The `format` parameter is specified as `%d-%b-%y %H:%M:%S`, which matches the format of the input strings, ensuring accurate parsing.\n",
     "   - The resultant 'datetime' column now provides a more useful and standardized format for any subsequent data analysis or time series modeling, integrating both date and time information into a single, coherent column."
    ],
    "metadata": {
@@ -238,7 +236,7 @@
     "---\n",
     "# Data Split\n",
     "## Training, and Testing Sets\n",
-    "In this project, I utilized both training and test sets. Initially, I designated 80% of the data as the training set and the remaining 20% as an unseen test set. This division ensures that the model has sufficient data for learning during the training process, enhancing its accuracy and robustness while preventing underfitting. Moreover, using 20% of unseen data as an independent test set to evaluate the model's final performance helps in assessing the model's generalization capability on new data, rather than merely measuring its fit on the training data.\n",
+    "In this project, we utilized both training and test sets. Initially, we designated 80% of the data as the training set and the remaining 20% as an unseen test set. This division ensures that the model has sufficient data for learning during the training process, enhancing its accuracy and robustness while preventing underfitting. Moreover, using 20% of unseen data as an independent test set to evaluate the model's final performance helps in assessing the model's generalization capability on new data, rather than merely measuring its fit on the training data.\n",
     "\n",
     "The approach here differs from using sklearn.model_selection.train_test_split. We employed a Recurrent Neural Network with Long Short-Term Memory (LSTM), necessitating the preservation of the dataset's chronological order. This is done to maintain the continuity of the time series data, enabling the network to more effectively learn and predict patterns and trends within the time series."
    ],
