add description of dataset

--- a/data_visualisation.ipynb
+++ b/data_visualisation.ipynb
@@ -2,34 +2,46 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Import"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# Import"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T11:22:15.689960300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-11-23T11:22:15.689960300Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read dataset"
+    "## Read dataset\n",
+    "\n",
+    "description of features\n",
+    "\n",
+    "1.  `date`: Date of logging IoT telemetry data\n",
+    "2.  `time`: Time of logging IoT telemetry data\n",
+    "3.  `FC1_Read_Input_Register`: Modbus function code that is responsible for reading an input register \n",
+    "4.  `FC2_Read_Discrete_Value`: Modbus function code that is in charge of  reading a discrete value \n",
+    "5. `FC3_Read_Holding_Register`: Modbus function code that is responsible for reading a holding register \n",
+    "6. `FC4_Read_Coil`: Modbus function code that is responsible for reading a coil \n",
+    "7. `label`: Tag normal and attack records, where 0 indicates normal and 1 indicates attacks  \n",
+    "8. `type`:  Tag attack categories, such as normal, DoS, DDoS and backdoor attacks, and normal records \n",
+    "\n"
    ]
   },
   {
@@ -252,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check value counts"
+    "## Check value counts\n"
    ]
   },
   {
