add comments on merge datetime

--- a/data_visualisation.ipynb
+++ b/data_visualisation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2023-11-23T11:22:15.689960300Z"
@@ -31,7 +31,7 @@
    "source": [
     "## Read dataset\n",
     "\n",
-    "description of features\n",
+    "#### Description of features\n",
     "\n",
     "1.  `date`: Date of logging IoT telemetry data\n",
     "2.  `time`: Time of logging IoT telemetry data\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,13 +250,13 @@
        "[287194 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('./IoT_Modbus.csv')\n",
+    "data = pd.read_csv('./datasets/IoT_Modbus.csv')\n",
     "data"
    ]
   },
@@ -443,15 +443,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merge datetime"
+    "# Merge datetime\n",
+    "\n",
+    "**Converting to DateTime Object**:\n",
+    "   - `pd.to_datetime`: The concatenated string is then converted into a datetime object using Pandas' `to_datetime` function. The `format` parameter is specified as `%d-%b-%y %H:%M:%S`, which matches the format of the input strings, ensuring accurate parsing.\n",
+    "   - The resultant 'datetime' column now provides a more useful and standardized format for any subsequent data analysis or time series modeling, integrating both date and time information into a single, coherent column.\n",
+    "   - The resultant 'hour' column now provides information on recording data in which hour of that day."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# merge datetime and extract hour data\n",
     "data['datetime'] = pd.to_datetime(data['date'] + ' ' + data['time'])\n",
     "data['hour'] = data['datetime'].dt.hour"
    ]
@@ -743,7 +749,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Attack distribute graph"
+    "# Attack distribute graph\n",
+    "    "
    ]
   },
   {
